--- a/Measurements.html
+++ b/Measurements.html
@@ -4,13 +4,11 @@
 		<title> Measurements </title>
 		<script type="text/javascript" src="Script.js"></script>
 		<link rel = "stylesheet" type="text/css" href = "MeasurementsFormat.css">
-		<meta name="viewport" content="width-device-width, initial-scale-1">
-		
+				
 	</head>
 	
 	<body>
-	<div id = "content">
-	<p> <font size ="7" face="freak out go bananas"> Pulldown maskine: </p>
+	Pulldown maskine:
 	<br>
 		<img src= "pulldown.png">
 			<br>
@@ -21,3 +19,4 @@
 	Tid:
 	<br><br><br>
 	Sets:
+</body>
