--- a/Index.html
+++ b/Index.html
@@ -9,29 +9,16 @@
 	</head>
 	
 	<body>
-		<div id = "content">
-				
+						
 			<img src= "FDMLogo.png">
-			<br>
-		<!--	<div id = text>
-			Fitness Digital Monitor. helps you keep track of your fitness routines:
-			How much weight you use, how many reps you take, how big your reps are and how long you take to complete your sets!
-			This will help you keep track of your development as well as how much weight you used on previous workouts on the different machines
-			It is also great at motivating you, seeing your improvements.
-			</div> -->
-			<br>
-			<!-- <button id = "button"> Start nu! </button> -->
-			<!-- <button id = "button1" onclick = "linkStart()"> Start nu! </button> -->
-			<!-- <a href="Measurements.HTML" class="button"> Start nu!</a> -->
+			<br><br>
 			<form action="Measurements.HTML">
-				<button onclick ="goToSite()"> Start nu!</button>
+				<button onclick ="goToSite()"> Start now!</button>
 			</form>
 			<br>
 			<br>
-			<div id="newContent"> </div>
+			<div id="aboutContent"> </div>
 			<button id = "button2" onclick ="insertText()"> How to use ? </button>
-			
-			
 			
 		</body>
 </html>
